java21->java17; 去掉mysql触发器依赖; 完成e2e测试